challenges/SolutionHelperFiles/ch5/mssql-store.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-svc
  labels:
    app: mssql-store
spec:
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
  type: LoadBalancer
  selector:
    app: mssql-store
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mssql-deploy
  labels:
    app: mssql-store
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mssql-store
    spec:
      containers:
      - image: microsoft/mssql-server-linux
        name: mssql-store
        ports:
        - containerPort: 1433
          name: sql
        volumeMounts:
        - name: mssql-persistent-storage
          mountPath: /var/opt/mssql
      volumes:
      - name: mssql-persistent-storage
        persistentVolumeClaim:
          claimName: mssql-pv-claim
